@@ -1,3 +1,9 @@
+Thu Aug 25 22:31:16 UTC 2011  Akshay V. Dabholkar  <aky@dre.vanderbilt.edu>
+
+        * dance/FaultCorrelationManager/FaultCorrelationManager_export.h:
+
+          Added back!
+
 Thu Aug 25 22:12:24 UTC 2011  Akshay V. Dabholkar  <aky@dre.vanderbilt.edu>
 
 
